--- a/src/app/desafios/desafios.component.html
+++ b/src/app/desafios/desafios.component.html
@@ -57,7 +57,7 @@
           </div>
         </div>
 
-
+        <!--
         <ul class="collapsible popout">
           <ng-container
             *ngFor="let desafio of desafios | async | filterBy: ['emaildemandante']: userEmail | filterBy: ['status']: status
@@ -125,13 +125,14 @@
               </div>
             </li>
           </ng-container>
-        </ul>
+        </ul>-->
 
-        <div>
-          <ul uk-accordion="collapsible: false">
+        <div class="uk-width-1-1">
+          <ul class="uk-box-shadow-medium" uk-accordion="collapsible: true" *ngFor="let desafio of desafios | async | filterBy: ['emaildemandante']: userEmail | filterBy: ['status']: status
+          | filterBy: ['status', 'nome', 'demandante', 'resumo', 'area']: search | filterBy: ['area']: area | filterBy: ['remunerado']: remunerado">
             <li>
-              <a class="uk-accordion-title" href="#">Item 1</a>
-              <div class="uk-accordion-content">
+              <a class="uk-accordion-title bg-grey" [ngClass]="{'bg-green accordion-text': desafio.status == 'concluído'}" href="#">{{desafio.nome}}</a>
+              <div style="padding-left:10px; padding-bottom:10px;" class="uk-accordion-content">
                 <a href="" class="uk-icon-button uk-margin-right" uk-icon="pencil" title="Editar Desafio"
                   uk-toggle="target: #modal-criar-novo"></a>
                 <a href="" class="uk-icon-button uk-margin-right" uk-icon="trash"
@@ -139,22 +140,15 @@
                 <a href="" class="uk-icon-button uk-margin-right" uk-icon="check" title="Concluir Desafio"
                   uk-toggle="target: #modal-concluir-desafio"></a>
 
-                <p><b>Demandante:</b>{{desafio.demandante}}</p>
-                <p><b>Email do Demandante:</b>{{desafio.emaildemandante}}</p>
-                <p><b>Área do problema:</b>{{desafio.area}}</p>
-                <p><b>Resumo:</b>{{desafio.resumo}}</p>
-                <p><b>Remuneração:</b>{{desafio.remunerado}}</p>
+                <p><b>Demandante: </b>{{desafio.demandante}}</p>
+                <p><b>Email do Demandante: </b>{{desafio.emaildemandante}}</p>
+                <p><b>Área do problema: </b>{{desafio.area}}</p>
+                <p><b>Resumo: </b>{{desafio.resumo}}</p>
+                <p><b>Remuneração: </b>{{desafio.remunerado}}</p>
 
-                <a (click)="getDesafioId(desafio.id)" style="position: absolute; right:10px; bottom:10px;"
-                  *ngIf="desafio.emaildemandante !== user?.email && desafio.status != 'concluído' && user?.profile != 'Demandante' && !(solucoesArray.includes(desafio.id))"
-                  class="waves-effect waves-light btn modal-trigger light-blue darken-2"
-                  href="#modalSolver"><i>send</i>Solucionar</a>
-                <a (click)="findOneSolver(desafio.id)" style="position: absolute; right:10px; bottom:10px;"
-                  *ngIf="desafio.emaildemandante !== user?.email && user?.profile != 'Demandante' && solucoesArray.includes(desafio.id)"
-                  class="waves-effect waves-light btn modal-trigger yellow darken-3"
-                  href="#modalSeeSolver"><i>remove_red_eye</i>Ver
-                  Sua Solução</a>
-
+                <a class="uk-button uk-button-primary" uk-toggle="target: #modal-criar-novo" (click)="getDesafioId(desafio.id)" *ngIf="desafio.emaildemandante !== user?.email && desafio.status != 'concluído' && user?.profile != 'Demandante' && !(solucoesArray.includes(desafio.id))"><span class="uk-margin-right" uk-icon="icon: file-edit"></span>
+                Solucionar</a>
+                <a class="uk-button uk-button-primary" uk-toggle="target: #modal-criar-novo" (click)="findOneSolver(desafio.id)" *ngIf="desafio.emaildemandante !== user.email && user.profile != 'Demandante' && solucoesArray.includes(desafio.id)"<i class="far fa-eye uk-margin-right"></i>Ver Sua Solução</a>
               </div>
             </li>
           </ul>
@@ -175,7 +169,7 @@
       <div class="uk-width-1-1">
         <input class="uk-input" [(ngModel)]="desafio.nome" type="text" placeholder="Nome do Desafio">
       </div>
-      <div class="uk-width-1-3">
+      <div class="uk-width-1-2">
 
         <select name="area2" (ngModel)="desafio.area" class="uk-select">
           <option [ngValue]="null" disabled selected>Seleciona a Área</option>
@@ -184,14 +178,8 @@
           </option>
         </select>
       </div>
-      <div class="uk-width-1-3">
-        <angular2-date-picker class="uk-input" [(ngModel)]="date" [settings]="settings"></angular2-date-picker>
-        <!--<input type="date" placeholder="Prazo Data" class="uk-input"/>-->
-
-      </div>
-      <div class="uk-width-1-3">
-        <input class="uk-input" placeholder="Prazo Hora" [ngxTimepicker]="picker">
-        <ngx-material-timepicker #picker></ngx-material-timepicker>
+      <div class="uk-width-1-2">
+        <angular2-date-picker [(ngModel)]="date" [settings]="settings"></angular2-date-picker>
       </div>
 
       <div>
@@ -407,7 +395,7 @@
   </ul>
 </div>
 -->
-<!-- Modal Create Desafio 
+<!-- Modal Create Desafio
 <div id="modal1" class="modal">
   <div class="modal-content">
     <h4>Criar Novo Desafio</h4>
@@ -479,7 +467,7 @@
   </div>
 </div>
 
-<!-- Modal Edit Desafio 
+<!-- Modal Edit Desafio
 <div id="modalEdit" class="modal">
   <div class="modal-content">
     <h4>Editar Desafio</h4>
@@ -571,7 +559,7 @@
   </div>
 </div> -->
 
-<!-- Modal Desafio Complete 
+<!-- Modal Desafio Complete
 <div id="modalComplete" class="modal">
   <div class="modal-content">
     <h4>Confirmação</h4>
