--- a/src/app/desafios/desafios.component.scss
+++ b/src/app/desafios/desafios.component.scss
@@ -2,3 +2,18 @@
   &:hover {
     border-radius: 20px;  }
 }
+
+.bg-green {
+  background-color:#66BB6A !important;
+}
+.bg-grey {
+  background-color: #F9F9F9;
+}
+
+.accordion-text {
+  color: white;
+}
+
+.uk-accordion-title {
+  padding: 10px !important;
+}
