--- a/src/styles.scss
+++ b/src/styles.scss
@@ -159,3 +159,10 @@ body {
 .wc-date-container[_ngcontent-c4] > span[_ngcontent-c4] {
   color: #666 !important;
 }
+
+.flatpickr-confirm {
+  background-color: white;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  padding: 5px;
+}
