--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,12 +41,11 @@ body {
 
 .uk-select {
   option {
-    font-size: .8em !important;
+    font-size: 0.8em !important;
   }
 }
 
 #icon-user {
-
   &:hover {
     color: $color-white;
   }
@@ -56,7 +55,6 @@ body {
   &:focus {
     color: $color-white;
   }
-
 }
 
 .active {
@@ -165,4 +163,23 @@ body {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   padding: 5px;
+}
+
+input,
+select,
+textarea {
+  border-radius: 10px !important;
+}
+
+.has-error {
+  border: 1px solid crimson;
+}
+
+.uk-text-small {
+  color: crimson;
+}
+
+.color-success {
+  color: $notify-success;
+  font-weight: bold;
 }
