--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,34 +17,40 @@
 </div>
 
 <footer class="page-footer">
-  <div class="uk-container" uk-grid>
-    <div class="uk-width-1-2@m uk-width-1-1@s uk-flex uk-flex-middle uk-text-center uk-margin">
+  <div class="uk-container">
+    <div class="uk-child-width-1-2@m uk-child-width-1-1@s uk-flex uk-flex-middle uk-text-center">
       <div class="uk-child-width-1-1 uk-flex uk-flex-middle uk-flex-center" uk-grid>
-        <img class="uk-margin-top" src="assets/images/logo-charset.png" style="width: 100px;">
-        <p class="white-text">Alameda Palmeiras, s/n - Câmpus Samambaia, Goiânia - GO, 74690-900, 2°
-          Andar, Sala 244 - APOEMA</p>
-      </div>
+        <div>
+          <img class="uk-margin-top" src="assets/images/logo-charset.png" style="width: 100px;">
+          <p class="white-text">Alameda Palmeiras, s/n - Câmpus Samambaia, Goiânia - GO, 74690-900, 2°
+            Andar, Sala 244 - APOEMA</p>
+        </div>
 
-    </div>
-    <div class="uk-width-1-4@m uk-width-1-1@s uk-flex uk-flex-center uk-margin">
-      <div>
-        <h5 class="white-text">Parceiros</h5>
-        <ul class="uk-list">
-          <li>Parceiro 1</li>
-          <li>Parceiro 2</li>
-        </ul>
       </div>
+      <div class="uk-child-width-1-2@m" uk-grid>
+        <div class="uk-flex uk-flex-right">
+          <div>
+            <h5 class="white-text">Parceiros</h5>
+            <ul class="uk-list">
+              <li>Parceiro 1</li>
+              <li>Parceiro 2</li>
+              <li>Parceiro 2</li>
+            </ul>
+          </div>
 
-    </div>
-    <div class="uk-width-1-4@m uk-width-1-1@s uk-flex uk-flex-center uk-margin">
-      <div>
-        <h5 class="white-text">Contato</h5>
-        <ul class="uk-list">
-          <li>challengeset@inf.ufg.br</li>
-          <li>(62) 3521-1724</li>
-          <li>(62) 3521-1505</li>
-        </ul>
+        </div>
+        <div class="uk-flex uk-flex-right">
+          <div>
+            <h5 class="white-text">Contato</h5>
+            <ul class="uk-list">
+              <li>challengeset@inf.ufg.br</li>
+              <li>(62) 3521-1724</li>
+              <li>(62) 3521-1505</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
+
   </div>
 </footer>
